start product block

--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,131 @@
       </div>
     </div>
   </header>
+  <main class="main">
+    <div class="container">
+      <div class="banner">
+        <div class="banner-section__inner">
+          <div class="banner-section__slider">
+            <a href="#" class="banner-section__slider-item">
+              <img class="banner-section__slider-img" width="100%" height="300px" src="images/banner-slider-1.jpg"
+                alt="" />
+            </a>
+            <a href="#" class="banner-section__slider-item">
+              <img class="banner-section__slider-img" width="100%" height="300px" src="images/banner-slider-1.jpg"
+                alt="" />
+            </a>
+
+
+            <a href="#" class="banner-section__slider-item">
+              <img class="banner-section__slider-img" width="100%" height="300px" src="images/banner-slider-1.jpg"
+                alt="" />
+            </a>
+            <a href="#" class="banner-section__slider-item">
+              <img class="banner-section__slider-img" width="100%" height="300px" src="images/banner-slider-1.jpg"
+                alt="" />
+            </a>
+
+            </a>
+          </div>
+        </div>
+      </div><!-- end banner -->
+
+      <section class="categorical t">
+        <div class="categorical__items flex-just">
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+          <div class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">coffe lost</h3>
+          </div>
+        </div>
+      </section> <!-- end categorical -->
+
+
+      <div class="product page-section">
+
+        <div class="product__inner">
+          <div class="product__tabs">
+            <a href="#tab-1" class="tab product__tabs-item tab--active">
+              New
+            </a>
+            <a href="#tab-2" class="tab product__tabs-item">Populyr</a>
+
+          </div>
+          <div class="product__content">
+            <div class="tabs-contant product__content-item tabs-contant--active" id="tab-1">
+
+              <div class="product__items">
+                <!-- start product__item -->
+                <div class="product__item">
+                  <h3 class="product__title">Бразилия Суль-де-Минас</h3>
+                  <img src="images/coffe__product.png" alt="" class="product__img" width="200px">
+                  <div class="product__info">
+                    <div class="product__text">
+                      Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
+                    </div>
+                    <div class="product__lines--wrapper flex-just">
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 80%;"></span></div>
+                        <span class="product__line--text">Кислотность</span>
+                      </div>
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 40%;"></span></div>
+                        <span class="product__line--text">Плотность</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- end product__item -->
+              </div>
+            </div><!-- end tab 1 -->
+
+            <div class="tabs-contant product__content-item" id="tab-2">
+              <div class="categorical__item">
+                <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+                <h3 class="categorical__title">coffe lost</h3>
+              </div>
+            </div><!-- end tab 2 -->
+          </div> <!-- end product__tabs -->
+        </div> <!-- end product__inner -->
+
+
+
+      </div><!-- end product -->
+
+    </div><!-- end container -->
+
+
+  </main>
   <div class="container">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia neque tenetur quidem, officiis amet magnam, ab
+    <p style="margin-top: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia neque tenetur quidem,
+      officiis amet magnam, ab
       ullam ipsum totam harum maxime mollitia aliquid autem sunt, eius est alias. Consequatur?
       Neque quia facere minus itaque dicta ipsum distinctio vero adipisci, quos quidem necessitatibus corrupti tempora
       illum accusamus! Eos minima corporis, sunt itaque doloribus incidunt quidem quasi soluta impedit rem
