--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,10 @@
           <div class="product__content">
             <div class="tabs-contant product__content-item tabs-contant--active" id="tab-1">
 
-              <div class="product__items">
+              <div class="product__items flex-just">
+
+
+
                 <!-- start product__item -->
                 <div class="product__item">
                   <h3 class="product__title">Бразилия Суль-де-Минас</h3>
@@ -152,25 +155,231 @@
                       Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
                     </div>
                     <div class="product__lines--wrapper flex-just">
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 40%;"></span></div>
+                        <span class="product__line--text">Кислотность</span>
+                      </div> <!-- end product__line -->
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 75%;"></span></div>
+                        <span class="product__line--text">Плотность</span>
+                      </div> <!-- end product__line -->
+
+                    </div><!-- end product__lines wr -->
+
+                    <div class="product__value flex-just">
+                      <div class="product__value--sum"> 1400 <span>&#8381</span></div>
+                      <div class="product__btn--inner">
+                        <button class="product__btn--quantity product__btn--quantity__minus">-</button>
+                        <input class="product__btn--result" type="text" name="" value="1" id="">
+                        <button class="product__btn--quantity product__btn--quantity__plus">+</button>
+                      </div>
+                    </div><!-- endproduct__value -->
+                    <div class="product__tab--weight">
+                      <button class="tab--weight__btn tab--weight__btn--activ">1000 гр</button>
+                      <button class="tab--weight__btn ">250 гр</button>
+                    </div><!-- end product__tab--weight -->
+                    <div class="product__bottom flex-just">
+                      <div class="product__bottom--select">
+                        Помол: <span>не молоть (в зернах)</span>
+                      </div>
+                      <button class="product__bottom--btn">Купить</button>
+                    </div> <!-- end product__bottom and select + btn -->
+
+
+                  </div><!-- end product__info -->
+
+                </div><!-- end product__item -->
+                <!-- start product__item -->
+                <div class="product__item">
+                  <h3 class="product__title">Бразилия Суль-де-Минас</h3>
+                  <img src="images/coffe__product.png" alt="" class="product__img" width="200px">
+                  <div class="product__info">
+                    <div class="product__text">
+                      Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
+                    </div>
+                    <div class="product__lines--wrapper flex-just">
+
                       <div class="product__lines">
                         <div class="product__line"><span style="width: 80%;"></span></div>
                         <span class="product__line--text">Кислотность</span>
-                      </div>
+                      </div> <!-- end product__line -->
+
                       <div class="product__lines">
                         <div class="product__line"><span style="width: 40%;"></span></div>
                         <span class="product__line--text">Плотность</span>
+                      </div> <!-- end product__line -->
+
+                    </div><!-- end product__lines wr -->
+
+                    <div class="product__value flex-just">
+                      <div class="product__value--sum"> 1400 <span>&#8381</span></div>
+                      <div class="product__btn--inner">
+                        <button class="product__btn--quantity product__btn--quantity__minus">-</button>
+                        <input class="product__btn--result" type="text" name="" value="1" id="">
+                        <button class="product__btn--quantity product__btn--quantity__plus">+</button>
                       </div>
+                    </div><!-- endproduct__value -->
+                    <div class="product__tab--weight">
+                      <button class="tab--weight__btn tab--weight__btn--activ">1000 гр</button>
+                      <button class="tab--weight__btn ">250 гр</button>
+                    </div><!-- end product__tab--weight -->
+                    <div class="product__bottom flex-just">
+                      <div class="product__bottom--select">
+                        Помол: <span>не молоть (в зернах)</span>
+                      </div>
+                      <button class="product__bottom--btn">Купить</button>
+                    </div> <!-- end product__bottom and select + btn -->
+
+
+                  </div><!-- end product__info -->
+
+                </div><!-- end product__item -->
+                <!-- start product__item -->
+                <div class="product__item">
+                  <h3 class="product__title">Бразилия Суль-де-Минас</h3>
+                  <img src="images/coffe__product.png" alt="" class="product__img" width="200px">
+                  <div class="product__info">
+                    <div class="product__text">
+                      Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
                     </div>
-                  </div>
-                </div>
-                <!-- end product__item -->
+                    <div class="product__lines--wrapper flex-just">
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 20%;"></span></div>
+                        <span class="product__line--text">Кислотность</span>
+                      </div> <!-- end product__line -->
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 95%;"></span></div>
+                        <span class="product__line--text">Плотность</span>
+                      </div> <!-- end product__line -->
+
+                    </div><!-- end product__lines wr -->
+
+                    <div class="product__value flex-just">
+                      <div class="product__value--sum"> 1400 <span>&#8381</span></div>
+                      <div class="product__btn--inner">
+                        <button class="product__btn--quantity product__btn--quantity__minus">-</button>
+                        <input class="product__btn--result" type="text" name="" value="1" id="">
+                        <button class="product__btn--quantity product__btn--quantity__plus">+</button>
+                      </div>
+                    </div><!-- endproduct__value -->
+                    <div class="product__tab--weight">
+                      <button class="tab--weight__btn tab--weight__btn--activ">1000 гр</button>
+                      <button class="tab--weight__btn ">250 гр</button>
+                    </div><!-- end product__tab--weight -->
+                    <div class="product__bottom flex-just">
+                      <div class="product__bottom--select">
+                        Помол: <span>не молоть (в зернах)</span>
+                      </div>
+                      <button class="product__bottom--btn">Купить</button>
+                    </div> <!-- end product__bottom and select + btn -->
+
+
+                  </div><!-- end product__info -->
+
+                </div><!-- end product__item -->
               </div>
             </div><!-- end tab 1 -->
 
             <div class="tabs-contant product__content-item" id="tab-2">
-              <div class="categorical__item">
-                <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
-                <h3 class="categorical__title">coffe lost</h3>
+              <div class="product__items flex-just">
+
+                <!-- start product__item -->
+                <div class="product__item">
+                  <h3 class="product__title">Бразилия Суль-де-Минас</h3>
+                  <img src="images/coffe__product.png" alt="" class="product__img" width="200px">
+                  <div class="product__info">
+                    <div class="product__text">
+                      Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
+                    </div>
+                    <div class="product__lines--wrapper flex-just">
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 80%;"></span></div>
+                        <span class="product__line--text">Кислотность</span>
+                      </div> <!-- end product__line -->
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 40%;"></span></div>
+                        <span class="product__line--text">Плотность</span>
+                      </div> <!-- end product__line -->
+
+                    </div><!-- end product__lines wr -->
+
+                    <div class="product__value flex-just">
+                      <div class="product__value--sum"> 1400 <span>&#8381</span></div>
+                      <div class="product__btn--inner">
+                        <button class="product__btn--quantity product__btn--quantity__minus">-</button>
+                        <input class="product__btn--result" type="text" name="" value="1" id="">
+                        <button class="product__btn--quantity product__btn--quantity__plus">+</button>
+                      </div>
+                    </div><!-- endproduct__value -->
+                    <div class="product__tab--weight">
+                      <button class="tab--weight__btn tab--weight__btn--activ">1000 гр</button>
+                      <button class="tab--weight__btn ">250 гр</button>
+                    </div><!-- end product__tab--weight -->
+                    <div class="product__bottom flex-just">
+                      <div class="product__bottom--select">
+                        Помол: <span>не молоть (в зернах)</span>
+                      </div>
+                      <button class="product__bottom--btn">Купить</button>
+                    </div> <!-- end product__bottom and select + btn -->
+
+
+                  </div><!-- end product__info -->
+
+                </div><!-- end product__item -->
+
+                <!-- start product__item -->
+                <div class="product__item">
+                  <h3 class="product__title">Бразилия Суль-де-Минас</h3>
+                  <img src="images/coffe__product.png" alt="" class="product__img" width="200px">
+                  <div class="product__info">
+                    <div class="product__text">
+                      Сбалансированный вкус с нотами арахиса, пудры какао и цедры лимона
+                    </div>
+                    <div class="product__lines--wrapper flex-just">
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 80%;"></span></div>
+                        <span class="product__line--text">Кислотность</span>
+                      </div> <!-- end product__line -->
+
+                      <div class="product__lines">
+                        <div class="product__line"><span style="width: 40%;"></span></div>
+                        <span class="product__line--text">Плотность</span>
+                      </div> <!-- end product__line -->
+
+                    </div><!-- end product__lines wr -->
+
+                    <div class="product__value flex-just">
+                      <div class="product__value--sum"> 1400 <span>&#8381</span></div>
+                      <div class="product__btn--inner">
+                        <button class="product__btn--quantity product__btn--quantity__minus">-</button>
+                        <input class="product__btn--result" type="text" name="" value="1" id="">
+                        <button class="product__btn--quantity product__btn--quantity__plus">+</button>
+                      </div>
+                    </div><!-- endproduct__value -->
+                    <div class="product__tab--weight">
+                      <button class="tab--weight__btn tab--weight__btn--activ">1000 гр</button>
+                      <button class="tab--weight__btn ">250 гр</button>
+                    </div><!-- end product__tab--weight -->
+                    <div class="product__bottom flex-just">
+                      <div class="product__bottom--select">
+                        Помол: <span>не молоть (в зернах)</span>
+                      </div>
+                      <button class="product__bottom--btn">Купить</button>
+                    </div> <!-- end product__bottom and select + btn -->
+
+
+                  </div><!-- end product__info -->
+
+                </div><!-- end product__item -->
+
+
               </div>
             </div><!-- end tab 2 -->
           </div> <!-- end product__tabs -->
@@ -184,6 +393,23 @@
 
 
   </main>
+
+  <!-- <div class="product__sale tabs-pagination tabs-pagination--active" id="pagination__tab-1">
+                      1400 <span>&#8381</span>
+                    </div>
+                    <div class="product__sale  tabs-pagination" id="pagination__tab-2">
+                      400 <span>&#8381</span>
+                    </div>
+                    <div class="product__pagination">
+                      <div class="product__pagination--tabs">
+                        <a href="#pagination__tab-1" class="tab product__tabs-item tab--active">
+                          New
+                        </a>
+                        <a href="#pagination__tab-2" class="tab product__tabs-item">Populyr</a>
+
+                      </div>
+                    </div> -->
+
   <div class="container">
     <p style="margin-top: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia neque tenetur quidem,
       officiis amet magnam, ab
