end cattegot-list

--- a/app/index.html
+++ b/app/index.html
@@ -91,40 +91,45 @@
         </div>
       </div><!-- end banner -->
 
-      <section class="categorical t">
+      <section class="categorical title">
         <div class="categorical__items flex-just">
-          <div class="categorical__item">
+          <a href="cattegor-list.html" class="categorical__item">
+            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
+            <h3 class="categorical__title">Готовая сылка</h3>
+          </a>
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
+          </a>
+
+          <a href="#" class="categorical__item">
             <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
             <h3 class="categorical__title">coffe lost</h3>
-          </div>
-          <div class="categorical__item">
-            <img class="categorical__img" src="images/coffe__product.png" alt="" width="100px" height="100px">
-            <h3 class="categorical__title">coffe lost</h3>
-          </div>
+          </a>
         </div>
       </section> <!-- end categorical -->
 
@@ -461,6 +466,7 @@
         </div>
 
       </section>
+
     </div><!-- end container -->
 
   </main>
@@ -575,9 +581,10 @@
         </p>
       </div>
     </div>
+  </footer>
 
 
-    <script src="js/main.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 
 </html>
